fix(navbar): update icons for light/dark mode

--- a/src/styles/_custom.css
+++ b/src/styles/_custom.css
@@ -77,7 +77,6 @@
   --ifm-button-size-multiplier: 1;
 
   /* navbar styles */
-  --ifm-menu-color-background-hover: color(from var(--ifm-color-emphasis-300) srgb r g b / 0.5);
   --ifm-navbar-shadow: none;
 
   /* heading styles */
